--- a/src/styles/css/game.css
+++ b/src/styles/css/game.css
@@ -107,6 +107,11 @@
   height: 33px;
   width: auto;
 }
+@media (max-width: 991px) {
+  .game-html .game_heading .logo img {
+    height: 24px;
+  }
+}
 .game-html .game_heading .toolbar {
   height: 100%;
 }
