--- a/src/styles/css/game.css
+++ b/src/styles/css/game.css
@@ -1,3 +1,7 @@
+.hidden {
+  display: none;
+}
+
 .game-html {
   height: 100%;
   width: 100%;
@@ -505,15 +509,19 @@
     font-size: 90%;
   }
 }
+@media (min-width: 1367px) {
+  .game-html .group_user .info_user {
+    font-size: 112.5%;
+  }
+}
 @media (min-width: 1801px) {
   .game-html .group_user .info_user {
-    font-size: 150%;
+    font-size: 137.5%;
   }
 }
 .game-html .group_user .info_user .right {
-  margin-left: 0;
   line-height: 16px;
-  margin-top: 4px;
+  margin-top: 2px;
 }
 .game-html .group_user .info_user .right .money {
   color: #ffaa00;
@@ -683,11 +691,18 @@
 }
 .game-html .group_user:nth-child(7) .coin_bet {
   left: 100%;
-  top: 50%;
+  top: 70%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  margin: 0;
+  margin: 0 0 0 4px;
+}
+.game-html .group_user:nth-child(7) .coin_bet .number {
+  top: 10%;
+  left: 4px;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
 }
 .game-html .group_user:nth-child(4) {
   right: 0;
@@ -701,12 +716,23 @@
 }
 .game-html .group_user:nth-child(4) .coin_bet {
   right: 100%;
-  top: 50%;
+  top: 70%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   left: auto;
   margin: 0;
+}
+.game-html .group_user:nth-child(4) .coin_bet svg {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.game-html .group_user:nth-child(4) .coin_bet .number {
+  top: 10%;
+  right: 4px;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
 }
 .game-html .group_user:nth-child(9),
 .game-html .group_user:nth-child(2) {
@@ -725,8 +751,32 @@
 .game-html .group_user:nth-child(8) {
   left: 0%;
 }
+.game-html .group_user:nth-child(8) .coin_bet {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  margin-left: auto;
+  left: auto;
+  -webkit-transform: translate(31%, -44%);
+  -ms-transform: translate(31%, -44%);
+  transform: translate(31%, -44%);
+  margin-top: 2%;
+}
 .game-html .group_user:nth-child(3) {
   right: 0%;
+}
+.game-html .group_user:nth-child(3) .coin_bet {
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  margin-left: 0;
+  -webkit-transform: translate(-31%, -44%) rotateY(180deg);
+  transform: translate(-31%, -44%) rotateY(180deg);
+  margin-top: 2%;
+}
+.game-html .group_user:nth-child(3) .coin_bet .number {
+  -webkit-transform: rotateY(180deg) translateX(100%);
+  transform: rotateY(180deg) translateX(100%);
 }
 .game-html .group_user:nth-child(6),
 .game-html .group_user:nth-child(5) {
@@ -734,6 +784,38 @@
   -webkit-transform: translateY(50%);
   -ms-transform: translateY(50%);
   transform: translateY(50%);
+}
+.game-html .group_user:nth-child(5) {
+  right: 0;
+}
+@media (min-width: 320px) and (orientation: portrait),
+  (max-width: 1023px) and (orientation: landscape) {
+  .game-html .group_user:nth-child(5) {
+    -webkit-transform: translate(-80%, 50%);
+    -ms-transform: translate(-80%, 50%);
+    transform: translate(-80%, 50%);
+  }
+}
+.game-html .group_user:nth-child(5) .coin_bet {
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  margin-left: 0;
+  -webkit-transform: translate(-104%, 15%);
+  -ms-transform: translate(-104%, 15%);
+  transform: translate(-104%, 15%);
+  top: 0;
+}
+.game-html .group_user:nth-child(5) .coin_bet svg {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.game-html .group_user:nth-child(5) .coin_bet .number {
+  top: 10%;
+  right: 0;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
 }
 .game-html .group_user:nth-child(6) {
   left: 0;
@@ -746,16 +828,23 @@
     transform: translate(80%, 50%);
   }
 }
-.game-html .group_user:nth-child(5) {
-  right: 0;
+.game-html .group_user:nth-child(6) .coin_bet {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  margin-left: auto;
+  -webkit-transform: translate(104%, 15%);
+  -ms-transform: translate(104%, 15%);
+  transform: translate(104%, 15%);
+  top: 0;
+  left: auto;
 }
-@media (min-width: 320px) and (orientation: portrait),
-  (max-width: 1023px) and (orientation: landscape) {
-  .game-html .group_user:nth-child(5) {
-    -webkit-transform: translate(-80%, 50%);
-    -ms-transform: translate(-80%, 50%);
-    transform: translate(-80%, 50%);
-  }
+.game-html .group_user:nth-child(6) .coin_bet .number {
+  top: 10%;
+  left: 4px;
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
 }
 .game-html .group_user {
   -webkit-transition: all 0.3s;
@@ -807,8 +896,8 @@
   border-radius: 50%;
 }
 .game-html .group_user .status .wrap_status svg .circle {
-  stroke-dasharray: 700;
-  stroke-dashoffset: 700;
+  stroke-dasharray: 600;
+  stroke-dashoffset: 600;
 }
 @-webkit-keyframes stroke {
   to {
@@ -999,9 +1088,7 @@
   -webkit-transform-origin: left bottom;
   -ms-transform-origin: left bottom;
   transform-origin: left bottom;
-  -webkit-transform: scale(1.5);
-  -ms-transform: scale(1.5);
-  transform: scale(1.5);
+  font-size: 17px;
 }
 .game-html .group_user .status_countdown span {
   background-image: linear-gradient(
@@ -1373,6 +1460,49 @@
   justify-content: center;
   margin: auto;
   width: 40%;
+  margin-top: -12%;
+}
+@media (min-width: 1801px) {
+  .game-html .coin_bet {
+    width: 45%;
+  }
+}
+.game-html .coin_bet .number {
+  position: absolute;
+  top: 74%;
+  left: 18%;
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  font-size: 125%;
+  font-weight: 500;
+  color: #05ff26;
+}
+.game-html .coin {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: yellow;
+  border: 1px dotted #333;
+  -webkit-animation: 1s animateOpacity;
+}
+@-webkit-keyframes animateOpacity {
+  from {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 1;
+  }
+  95% {
+    opacity: 0.6;
+  }
+  to {
+    opacity: 0;
+  }
 }
 .game-html .group_chat {
   position: absolute;
@@ -1895,13 +2025,12 @@
 }
 .game-html .group_tool .group_flush {
   position: absolute;
-  padding: 0 1.2%;
-  top: -1px;
+  top: 2px;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  width: 37.6436781609%;
-  left: 1.36%;
+  width: 33.0459770115%;
+  left: 2px;
 }
 @media (min-width: 320px) and (orientation: portrait),
   (max-width: 1023px) and (orientation: landscape) {
@@ -1926,6 +2055,7 @@
   font-weight: 900;
   text-align: center;
   font-size: 75%;
+  margin-left: 4%;
 }
 @media (min-width: 320px) and (orientation: portrait),
   (max-width: 1023px) and (orientation: landscape) {
@@ -1972,6 +2102,7 @@
   background-image: url(/images/deco2_sp.png);
   background-size: 100% 100%;
   padding: 0 15% 0 10%;
+  border-radius: 20px 0 0 20px;
 }
 @media (min-width: 320px) and (orientation: portrait),
   (max-width: 1023px) and (orientation: landscape) {
@@ -2175,6 +2306,7 @@
   align-items: stretch;
   height: 100%;
   gap: 2px;
+  margin-left: -5%;
 }
 @media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
   .game-html .group_tool .toolbar.toolbar_sp {
@@ -2203,6 +2335,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -2216,11 +2352,17 @@
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
+  gap: 4px;
 }
 @media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
   .game-html .group_tool .toolbar .item {
     height: calc(33.33% - 1.3333333333px);
     width: calc(33.33% - 1.3333333333px);
+  }
+}
+@media (min-width: 1801px) {
+  .game-html .group_tool .toolbar .item {
+    gap: 8px;
   }
 }
 .game-html .group_tool .toolbar .item:before {
@@ -2295,11 +2437,30 @@
   -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2509803922);
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2509803922);
   text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-ordinal-group: 0;
+  -ms-flex-order: -1;
+  order: -1;
 }
 @media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
   .game-html .group_tool .toolbar .item .value {
-    font-size: 175%;
+    font-size: 150%;
   }
+}
+.game-html .group_tool .toolbar .item .view_money {
+  font-size: 75%;
+  line-height: 12px;
+  color: #ffaa00;
+  font-weight: 400;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  gap: 8px;
 }
 .game-html .group_tool .toolbar .item:nth-child(4) {
   width: calc(66.6666666667% - 0.6666666667px);
@@ -2378,10 +2539,11 @@
 .game-html .group_tool .coin_bet {
   top: auto;
   bottom: -30%;
-  left: 100%;
-  -webkit-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  transform: translateX(-100%);
+  left: 0%;
+  -webkit-transform: translateX(-170%);
+  -ms-transform: translateX(-170%);
+  transform: translateX(-170%);
+  display: none;
 }
 .game-html .avatar {
   background-image: url(/images/avt_bg2.png);
@@ -2469,6 +2631,24 @@
     top: 100%;
     left: 0;
     overflow: hidden;
+  }
+}
+.game-html body {
+  font-size: 14px;
+}
+@media (min-width: 1241px) {
+  .game-html body {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1367px) {
+  .game-html body {
+    font-size: 17px;
+  }
+}
+@media (min-width: 1801px) {
+  .game-html body {
+    font-size: 18px;
   }
 }
 .game-html .game {
